[workspace]
members = ["kelp-2d", "kelp-2d-cdylib", "kelp-2d-imgui-wgpu"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Emmy Leadley <emmy.lussa@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "2D wgpu-based sprite renderer"
repository = "https://github.com/emmyleaf/kelp-2d"
keywords = ["2d", "gamedev", "graphics", "renderer", "wgpu"]
categories = ["game-development", "graphics", "rendering", "rendering::engine"]

[workspace.dependencies]
# using the version of `ahash` already in tree for now
ahash = "0.7"
bytemuck = "1"
env_logger = "0.10"
glam = { version = "0.23", features = ["bytemuck"] }
indexmap = "1"
interoptopus = { version = "0.14", features = ["derive", "log"] }
interoptopus_backend_csharp = "0.14"
log = "0.4"
naga = "0.11"
png = "0.17"
pollster = "0.3"
rand = "0.8"
raw-window-handle = "0.5"
smallvec = "1"
thiserror = "1"
wgpu = { version = "0.15", features = ["expose-ids", "glsl"] }
winit = "0.28"
