[workspace]
members = ["kelp-2d", "kelp-2d-cdylib", "kelp-2d-imgui-wgpu"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Emmy Leadley <emmy.lussa@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "2D wgpu-based sprite renderer"
repository = "https://github.com/emmyleaf/kelp-2d"
keywords = ["2d", "gamedev", "graphics", "renderer", "wgpu"]
categories = ["game-development", "graphics", "rendering", "rendering::engine"]

[workspace.dependencies]
ahash = "0.8"
bytemuck = "1"
env_logger = "0.11"
guillotiere = "0.6"
glam = { version = "0.25", features = ["bytemuck", "mint"] }
imgui = { version = "0.11", features = ["docking"] }
indexmap = "2"
interoptopus = { version = "0.14", features = ["derive", "log"] }
interoptopus_backend_csharp = "0.14"
log = "0.4"
mint = "0.5"
png = "0.17"
pollster = "0.3"
rand = "0.8"
raw-window-handle = "0.6"
smallvec = "1"
thiserror = "1"
wgpu = { version = "0.19", features = ["glsl"] }
winit = { version = "0.29", features = ["rwh_06"] }
