[package]
name = "kelp-2d-cdylib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
env_logger = { workspace = true }
interoptopus = { workspace = true }
kelp-2d = { path = "../kelp-2d" }
log = { workspace = true }
raw-window-handle = { workspace = true }

[dev-dependencies]
interoptopus_backend_csharp = { workspace = true }
