[package]
name = "kelp-2d"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[lib]
crate-type = ["rlib"]

[dependencies]
bytemuck = { workspace = true }
glam = { workspace = true }
naga = { workspace = true }
pollster = { workspace = true }
raw-window-handle = { workspace = true }
rustc-hash = { workspace = true }
wgpu = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
png = { workspace = true }
rand = { workspace = true }
winit = { workspace = true }
