[package]
name = "kelp-2d"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[lib]
crate-type = ["rlib"]

[dependencies]
ahash = { workspace = true }
bytemuck = { workspace = true }
guillotiere = { workspace = true }
glam = { workspace = true }
indexmap = { workspace = true }
interoptopus = { workspace = true }
kelp-2d-imgui-wgpu = { path = "../kelp-2d-imgui-wgpu" }
mint = { workspace = true }
pollster = { workspace = true }
raw-window-handle = { workspace = true }
thiserror = { workspace = true }
wgpu = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
imgui = { workspace = true }
png = { workspace = true }
rand = { workspace = true }
winit = { workspace = true }
